tests/NormalTests/paczka1/small_fuzzy/22961895.err
Error in line 2: v5V S393 20,7
Error in line 4: 9UqLQx5naEU A870 36,4
Error in line 14: A52 A458 33,5
